Set fixed width for logo to align with margin on content

--- a/app/styles/nav.scss
+++ b/app/styles/nav.scss
@@ -16,7 +16,7 @@ nav {
   }
 
   .logo {
-    margin-right: 20px;
+    width: 210px;
     margin-bottom: 0;
     @include logo;
   }
